[package]
name = "wal-s"
description = "Implementation of write-ahead log based storage."
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"


[dependencies]
bincode = "1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"]}


[dependencies.rocksdb]
version = "0.18"
default-features = false
features = ["multi-threaded-cf", "lz4"]


[dev-dependencies]
tokio = "1.20.0"
criterion = { version = "0.3", features = ["html_reports", "async_tokio"]}

[[bench]]
name = "bench_wals"
harness = false