[package]
name = "structdb"
description = "Persistent data structures using RocksDB."
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"


[dependencies]
bincode = "1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"]}
librocksdb-sys = "0.11.0"
thiserror = "1.0.44"
vlseqid = "0.2.0"
nummer = "0.2.1"


[dependencies.rocksdb]
version = "0.21"
default-features = false
features = ["multi-threaded-cf", "lz4"]


[dependencies.arrow]
package = "arrow2"
git = "https://github.com/jorgecarleitao/arrow2"
rev = "d5c78e7ba45fcebfbafd55a82ba2601ee3ea9617"
version = "0.17.2"
default-features = false
features = [
  "compute_aggregate",
  "compute_arithmetics",
  "compute_boolean",
  "compute_boolean_kleene",
  "compute_cast",
  "compute_comparison",
  "compute_concatenate",
  "compute_filter",
  "compute_if_then_else",
]

[dev-dependencies]
tokio = "1.20.0"
criterion = { version = "0.3", features = ["html_reports", "async_tokio"]}

[[bench]]
name = "bench_topic"
harness = false
