[package]
name = "structdb"
description = "Persistent data structures using RocksDB."
version = "0.13.0"
edition = "2021"
license-file = "LICENSE"


[dependencies]
bincode = "1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"]}
librocksdb-sys = "0.11.0"
thiserror = "1.0.44"
byte_counter = "0.3.0"


[dependencies.rocksdb]
version = "0.21"
default-features = false
features = ["multi-threaded-cf", "lz4"]


[dev-dependencies]
tokio = "1.20.0"
criterion = { version = "0.3", features = ["html_reports", "async_tokio"]}

[[bench]]
name = "bench_topic"
harness = false
